// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  table-layout: fixed;
  width: 100%;
  border-collapse: collapse;
}

.emotion-2 {
  border: 0;
  border-bottom-width: 1px;
  border-color: #d4dae7;
  border-style: solid;
}

.emotion-4 {
  color: #4a4f62;
}

.emotion-4 a {
  color: inherit;
}

.emotion-4 tr:nth-of-type(even) {
  background-color: #fafafb;
}

.emotion-4:hover {
  color: #4f0599;
}

.emotion-4:hover td:first-of-type {
  font-weight: 500;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4 [data-visibility='hover'] {
  -webkit-transition: opacity 150ms;
  transition: opacity 150ms;
  opacity: 0;
  pointer-events: none;
  visibility: hidden;
}

.emotion-4:hover [data-visibility='hover'] {
  opacity: 1;
  pointer-events: auto;
  visibility: visible;
}

.emotion-6 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  color: #b2b6c3;
  text-align: left;
  padding: 12px 16px;
  font-size: 14px;
  line-height: 24px;
}

.emotion-16 {
  overflow: hidden;
  white-space: nowrap;
  padding: 12px 16px;
  font-size: 14px;
  line-height: 24px;
}

<table
    class="emotion-0 emotion-1"
  >
    <thead
      class="emotion-2 emotion-3"
    >
      <tr
        class="emotion-4 emotion-5"
      >
        <th
          class="emotion-6 emotion-7"
        >
          ID
        </th>
        <th
          class="emotion-6 emotion-7"
        >
          Status
        </th>
        <th
          class="emotion-6 emotion-7"
        >
          Date
        </th>
      </tr>
    </thead>
    <tbody
      class="emotion-12 emotion-70"
    >
      <tr
        class="emotion-4 emotion-5"
      >
        <td
          class="emotion-16 emotion-17"
        >
          165
        </td>
        <td
          class="emotion-16 emotion-17"
        >
          Ongoing
        </td>
        <td
          class="emotion-16 emotion-17"
        >
          Yesterday
        </td>
      </tr>
      <tr
        class="emotion-4 emotion-5"
      >
        <td
          class="emotion-16 emotion-17"
        >
          56
        </td>
        <td
          class="emotion-16 emotion-17"
        >
          Resolved
        </td>
        <td
          class="emotion-16 emotion-17"
        >
          1 hour ago
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Table renders correctly while loading 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-0 {
  table-layout: fixed;
  width: 100%;
  border-collapse: collapse;
}

.emotion-2 {
  border: 0;
  border-bottom-width: 1px;
  border-color: #d4dae7;
  border-style: solid;
}

.emotion-4 {
  color: #4a4f62;
}

.emotion-4 a {
  color: inherit;
}

.emotion-4 tr:nth-of-type(even) {
  background-color: #fafafb;
}

.emotion-4:hover {
  color: #4f0599;
}

.emotion-4:hover td:first-of-type {
  font-weight: 500;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4 [data-visibility='hover'] {
  -webkit-transition: opacity 150ms;
  transition: opacity 150ms;
  opacity: 0;
  pointer-events: none;
  visibility: hidden;
}

.emotion-4:hover [data-visibility='hover'] {
  opacity: 1;
  pointer-events: auto;
  visibility: visible;
}

.emotion-6 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  color: #b2b6c3;
  text-align: left;
  padding: 12px 16px;
  font-size: 14px;
  line-height: 24px;
}

.emotion-14 {
  overflow: hidden;
  white-space: nowrap;
  padding: 12px 16px;
  font-size: 14px;
  line-height: 24px;
}

.emotion-14.emotion-14 {
  height: 80px;
  position: relative;
}

.emotion-16.emotion-16 {
  color: #4f0599;
  position: absolute;
  top: 16px;
  left: 50%;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-animation: animation-0 0.75s linear infinite;
  animation: animation-0 0.75s linear infinite;
}

<table
    class="emotion-0 emotion-1"
  >
    <thead
      class="emotion-2 emotion-3"
    >
      <tr
        class="emotion-4 emotion-5"
      >
        <th
          class="emotion-6 emotion-7"
        >
          ID
        </th>
        <th
          class="emotion-6 emotion-7"
        >
          Date
        </th>
      </tr>
    </thead>
    <tbody
      class="emotion-10 emotion-70"
    >
      <tr
        class="emotion-4 emotion-5"
      >
        <td
          class="emotion-14 emotion-15"
          colspan="2"
        >
          <div
            aria-valuemax="1"
            aria-valuemin="0"
            class="emotion-16"
            role="progressbar"
          >
            <div
              class="emotion-17"
              style="height: 40px; width: 40px;"
            >
              <svg
                height="100%"
                viewBox="0 0 32 32"
                width="100%"
              >
                <circle
                  cx="16"
                  cy="16"
                  fill="none"
                  r="14"
                  stroke-width="4"
                  style="stroke: currentColor; opacity: 0.2;"
                />
                <circle
                  cx="16"
                  cy="16"
                  fill="none"
                  r="14"
                  stroke-width="4"
                  style="stroke: currentColor; stroke-dashoffset: 60; stroke-dasharray: 80;"
                />
              </svg>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
